# xmms

./: .clang-format  .clang-tidy  .codespellrc  .editorconfig  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .yamllint.yml  ABOUT-NLS  AGENTS.md  APKBUILD  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  FAQ  GNUmakefile  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  wmxmms.1.in  xmms.1.in  xmms.m4  xmms.spec  xmms.spec.in
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  gtk_migration.yml
.github/workflows/: ci.yml  package.yml
Effect/: CMakeLists.txt  Makefile.am  Makefile.in
Effect/echo_plugin/: CMakeLists.txt  Makefile.in  echo.c  gui.c
Effect/stereo_plugin/: CMakeLists.txt  Makefile.in  stereo.c
Effect/voice/: CMakeLists.txt  Makefile.in  about.c  voice.c  voice.h
General/: CMakeLists.txt  Makefile.in
General/ir/: CMakeLists.txt  Makefile.am  Makefile.in  about.c  configure.c  ir.c  ir.h  irfunc.c  irio.c  irman.h
General/joystick/: CMakeLists.txt  Makefile.am  Makefile.in  about.c  configure.c  joy.c  joy.h
General/song_change/: CMakeLists.txt  Makefile.in  song_change.c
Input/: CMakeLists.txt  Makefile.am  Makefile.in
Input/cdaudio/: CMakeLists.txt  Makefile.am  Makefile.in  cdaudio.c  cdaudio.h  cddb.c  cdinfo.c  cdinfo.h  configure.c  http.c  http.h
Input/mikmod/: CMakeLists.txt  Makefile.am  Makefile.in  drv_xmms.c  mikmod-plugin.h  plugin.c
Input/mpg123/: CMakeLists.txt  Makefile.am  Makefile.in  README  common.c  configure.c  dct36_3dnow.s  dct64.c  dct64_3dnow.s  dct64_MMX.s  dct64_i386.c  decode.c  decode_2to1.c  decode_3dnow.s  decode_4to1.c  decode_MMX.s  decode_i386.c  decode_i586.s  dxhead.c  dxhead.h  equalizer.c  fileinfo.c  getbits.c  getbits.h  getcpuflags.s  http.c  huffman.h  id3.c  id3.h  id3_frame.c  id3_frame_content.c  id3_frame_text.c  id3_frame_url.c  id3_header.h  id3_tag.c  l2tables.h  layer1.c  layer2.c  layer3.c  mpg123.c  (+3 more)
Input/tonegen/: CMakeLists.txt  Makefile.am  Makefile.in  tonegen.c
Input/vorbis/: CMakeLists.txt  Makefile.in  configure.c  fileinfo.c  http.c  http.h  vcedit.c  vcedit.h  vorbis.c  vorbis.h
Input/wav/: CMakeLists.txt  Makefile.am  Makefile.in  wav.c  wav.h
Output/: CMakeLists.txt  Makefile.in
Output/OSS/: CMakeLists.txt  Makefile.in  OSS.c  OSS.h  about.c  audio.c  configure.c  convert.c  init.c  mixer.c  soundcard.h
Output/alsa/: CMakeLists.txt  Makefile.am  Makefile.in  about.c  alsa.c  alsa.h  audio.c  configure.c  init.c
Output/disk_writer/: CMakeLists.txt  Makefile.in  disk_writer.c
Output/esd/: CMakeLists.txt  Makefile.in  about.c  audio.c  configure.c  esd.c  esdout.h  init.c  mixer.c
Output/pulse/: CMakeLists.txt  about.c  audio.c  configure.c  pulse.c  pulse.h
Output/solaris/: Makefile.in  README.solaris  Sun.c  Sun.h  about.c  audio.c  configure.c  init.c
Output/sun/: Makefile.am  Makefile.in  about.c  audio.c  configure.c  convert.c  mixer.c  mixer.h  resample.h  sun.c  sun.h
Visualization/: CMakeLists.txt  Makefile.in
Visualization/blur_scope/: CMakeLists.txt  Makefile.am  Makefile.in  blur_scope.c  blur_scope.h  config.c
Visualization/common/: vis_chrome.c  vis_chrome.h
Visualization/opengl_spectrum/: CMakeLists.txt  Makefile.am  Makefile.in  configure.c  opengl_spectrum.c  opengl_spectrum.h
Visualization/sanalyzer/: CMakeLists.txt  Makefile.am  Makefile.in  spectrum.c
cmake/: XmmsPlugin.cmake  xmms_config.h.cmake
data/: xmms.desktop
debian/: changelog  control  copyright  postinst  rules  watch  xmms-dev.install  xmms.install
docs/: GTK_MIGRATION_ROADMAP.md
intl/: ChangeLog  l10nflist.c  plural.c
issues/: issue_11.md  issue_12.md  issue_13.md  issue_14.md  issue_15.md  issue_16.md  issue_17.md  issue_18.md  issue_19.md  issue_2.md  issue_20.md  issue_21.md  issue_22.md  issue_23.md  issue_24.md  issue_25.md  issue_26.md  issue_27.md  issue_28.md  issue_29.md  issue_3.md  issue_30.md  issue_31.md  issue_32.md  issue_4.md  issue_5.md  issue_6.md  issue_7.md  issue_8.md  issue_9.md
libxmms/: CMakeLists.txt  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  charset.c  charset.h  config.h.in  configfile.c  configfile.h  configure  configure.in  dirbrowser.c  dirbrowser.h  formatter.c  formatter.h  snap.c  snap.h  titlestring.c  titlestring.h  util.c  util.h  xconvert.c  xconvert.h  xentry.c  xentry.h  xmmsctrl.c  xmmsctrl.h
po/: ChangeLog  LINGUAS  az.po  bg.po  cy.po  el.po  en.po  en_GB.po  es.po  eu.po  fr.po  hu.po  id.po  it.po  ka.po  ko.po  lt.po  lv.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sr@Latn.po  tg.po  uz.po  wa.po  zh_CN.po  zh_TW.po
scripts/: Dockerfile.alpine-apk  Dockerfile.fedora-rpm  build-deb.sh  create-gh-labels.sh  fix_gtk3_pass2.py  fix_gtk3_pass3.py  fix_gtk3_pass4.py  fix_gtk3_pass5.py  format-check.sh  regen-build.sh  run-clang-tidy.sh  setup-dev.sh  test-packages.sh
tests/skin/: CMakeLists.txt  README.md  download_archive_org_corpus.py  generate_golden_previews.py  generate_skin_fixtures.py  skin_preview.c  skin_preview.h  skin_preview_tool.c  test_skin_archive.c
wmxmms/: CMakeLists.txt  Makefile.am  Makefile.in  getopt.c  getopt.h  wmxmms.c
xmms/: CMakeLists.txt  Makefile.am  Makefile.in  about.c  bmp.c  bmp.h  controlsocket.c  controlsocket.h  dnd.h  dock.c  dock.h  effect.c  effect.h  eq_graph.c  eq_graph.h  eq_slider.c  eq_slider.h  equalizer.c  equalizer.h  fft.c  fft.h  fullscreen.c  fullscreen.h  general.c  general.h  getopt.c  getopt1.c  hints.c  hints.h  hslider.c  hslider.h  i18n.h  i18n.h.in  input.c  input.h  main.c  main.h  menurow.c  menurow.h  mkdtemp.c  (+54 more)
xmms/defskin/: CMakeLists.txt  Makefile.in
